# multi-fabric-data-agent-orchestration

./: .env.example  .gitignore  ARCHITECTURE-AGENT-FRAMEWORK.md  ARCHITECTURE-LANGGRAPH.md  ARCHITECTURE.md  README.md  pyproject.toml  requirements-agent-framework.txt  requirements-langgraph.txt  requirements.txt
src/: __init__.py
src/agent_framework/: __init__.py  agents.py  context.py  main.py  tools.py  workflow.py
src/langgraph/: __init__.py  context.py  graph.py  main.py  nodes.py  state.py  tools.py
src/shared/: __init__.py  auth.py  config.py
